--- a/src/style.css
+++ b/src/style.css
@@ -105,11 +105,16 @@ input {
 .load-more {
   margin: 12px auto;
   padding: 5px 10px;
-  background-color: rgba(47, 123, 238, 0.966);
+  background-color: rgba(39, 107, 209, 0.966);
   color: #fff;
-  border: 1px solid rgba(47, 123, 238, 0.966);
+  padding: 10px;
+  width: 100px;
+  border-radius: 20px;
 }
-
+.load-more:hover {
+  background-color: rgba(32, 86, 167, 0.966);
+  box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.5);
+}
 .is-hidden {
   display: none;
 }
